QA_Ipreo/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <label>Renewal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Renewal Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Delta_Type__c</fullName>
        <label>Revenue Delta Type</label>
        <picklist>
            <picklistValues>
                <fullName>Uptick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downtick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <inlineHelpText>Either Subscription (ACV and ACV/TRANS) or Project (PROJ).  Required to save the Opportunity.</inlineHelpText>
        <label>Revenue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sales Ops team member responsible for verification of the Closed Opportunity.  Only editable by Sales Ops.  Required at Opportunity Stage &quot;Closed Won Verified&quot;.</inlineHelpText>
        <label>Sales Ops Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_Sales_Ops_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <formula>Contract__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Billing_Period__c</fullName>
        <formula>Contract__r.Special_Billing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Billing Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TSX_Tier__c</fullName>
        <label>TSX Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>This_Year_ACV__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Item 401: Closed Won Verifed Sales To Date - a roll up of all ACV on Opp but just for Closed Date=This Year.
if Closed Date=This Year, update this field as 1, then use to roll-up ACV</description>
        <label>This Year ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <description>Stores the date when the Opportunity Stage was changed to &quot;Closed Won Verified&quot; or &quot;Closed Cancelled Verified&quot;</description>
        <inlineHelpText>Stores the date when the Opportunity Stage was changed to &quot;Closed Won Verified&quot; or &quot;Closed Cancelled Verified&quot;</inlineHelpText>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <inlineHelpText>Ipreo Vertical with which Opportunity is associated (ex GMG, Corporate).  Defaults from Account when Opportunity is saved.  Can be updated.  Selection of Vertical filters the list of values for LOB.  Required at Closed Won Sales, Closed Won Verified.</inlineHelpText>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Buyside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sellside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Bentson_NEW_Opptys_ALL</fullName>
        <columns>Owner_Closed_Date__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Account_Billing_City__c</columns>
        <columns>Account_Billing_State__c</columns>
        <columns>Account_Billing_Country__c</columns>
        <columns>Product_Bundle__c</columns>
        <columns>Key_Win__c</columns>
        <columns>Commit__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Net_New_Business__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Business</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Won Verified,Closed Lost</value>
        </filters>
        <label>GMG NEW Opptys - ALL</label>
    </listViews>
    <listViews>
        <fullName>Bentson_NEW_Opptys_NEXT_90_DAYS</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Key_Win__c</columns>
        <columns>Commit__c</columns>
        <columns>Product_Bundle__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Net_New_Business__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Business</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Won Verified,Closed Lost</value>
        </filters>
        <label>GMG NEW Opptys - NEXT 90 DAYS</label>
    </listViews>
    <listViews>
        <fullName>Bentson_NEW_Opptys_THIS_MONTH</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Product_Bundle__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Net_New_Business__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Business</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Won Verified,Closed Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>GMG NEW Opptys - THIS MONTH</label>
    </listViews>
    <listViews>
        <fullName>Bentson_NEW_Opptys_THIS_MONTH1</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Product_Bundle__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Key_Win__c</columns>
        <columns>Commit__c</columns>
        <columns>Net_New_Business__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Business</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Won Verified,Closed Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>GMG NEW Opptys - BACKLOG</label>
    </listViews>
    <listViews>
        <fullName>Bentson_NEW_Opptys_THIS_YEAR</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Product_Bundle__c</columns>
        <columns>Key_Win__c</columns>
        <columns>Commit__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Net_New_Business__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Business</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Won Verified,Closed Lost</value>
        </filters>
        <label>GMG NEW Opptys - THIS YEAR</label>
    </listViews>
    <listViews>
        <fullName>Bentson_RENEWAL_Opptys_ALL</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Product_Bundle__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACV__c</columns>
        <columns>Net_New_Business__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Owner_Closed_Date__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Renewal</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Cancelled Verified,Closed Won Verified</value>
        </filters>
        <label>GMG RENEWAL Opptys - ALL</label>
    </listViews>
    <listViews>
        <fullName>Bentson_RENEWAL_Opptys_BACKLOG</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Product_Bundle__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>At_Risk__c</columns>
        <columns>ACV__c</columns>
        <columns>Net_New_Business__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Renewal</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Cancelled Verified,Closed Won Verified</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>GMG RENEWAL Opptys - BACKLOG</label>
    </listViews>
    <listViews>
        <fullName>Bentson_RENEWAL_Opptys_NEXT_90_DAYS</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Product_Bundle__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>At_Risk__c</columns>
        <columns>ACV__c</columns>
        <columns>Net_New_Business__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Renewal</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Cancelled Verified,Closed Won Verified</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <label>GMG RENEWAL Opptys - NEXT 90 DAYS</label>
    </listViews>
    <listViews>
        <fullName>Bentson_RENEWAL_Opptys_THIS_MONTH</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Product_Bundle__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACV__c</columns>
        <columns>Net_New_Business__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Renewal</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Cancelled Verified,Closed Won Verified</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>GMG RENEWAL Opptys - THIS MONTH</label>
    </listViews>
    <listViews>
        <fullName>Bentson_RENEWAL_Opptys_THIS_YEAR</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Product_Bundle__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>At_Risk__c</columns>
        <columns>ACV__c</columns>
        <columns>Net_New_Business__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Renewal</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Cancelled Verified,Closed Won Verified</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>GMG RENEWAL Opptys - THIS YEAR</label>
    </listViews>
    <listViews>
        <fullName>Closed_Won_Cancelled_Opps_for_Processing</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Net_New_Business__c</columns>
        <columns>ACV__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won Sales,Closed Cancelled</value>
        </filters>
        <label>Closed Won/Cancelled Opps for Processing</label>
        <sharedTo>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Won_Sales</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CLOSED</columns>
        <columns>OPPORTUNITY.WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Cancelled</value>
        </filters>
        <label>Closed Cancelled</label>
        <sharedTo>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Won_Sales_GMG</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Vertical__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Renewal_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Product_Bundle__c</columns>
        <columns>ACV__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Annual_Pass_Through__c</columns>
        <columns>Net_New_Business__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Sales_Ops_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won Sales,Closed Cancelled</value>
        </filters>
        <label>Closed Won Sales (By Vertical)</label>
        <sharedTo>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Won_Sales_Needs_Verified</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Renewal_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Vertical__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Product_Bundle__c</columns>
        <columns>ACV__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Net_New_Business__c</columns>
        <columns>Evergreen_Date__c</columns>
        <columns>Annual_Pass_Through__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Sales_Ops_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won Sales,Closed Cancelled</value>
        </filters>
        <label>SalesOps Verification Queue</label>
        <sharedTo>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Won_Sales_Needs_Verified_Katy</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACV__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Net_New_Business__c</columns>
        <columns>Annual_Pass_Through__c</columns>
        <columns>Prior_Year_Pass_Through__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CLOSED</columns>
        <columns>OPPORTUNITY.WON</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won Sales,Closed Cancelled</value>
        </filters>
        <filters>
            <field>Prior_Year_Pass_Through__c</field>
            <operation>notEqual</operation>
            <value>USD 0</value>
        </filters>
        <label>Closed Won Sales (Needs Verified) - Katy</label>
    </listViews>
    <recordTypes>
        <fullName>Budget</fullName>
        <active>true</active>
        <businessProcess>Budget</businessProcess>
        <description>Used for Budget records</description>
        <label>Budget</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Business</fullName>
        <active>true</active>
        <businessProcess>New Business and Renewals</businessProcess>
        <description>Use this if there are no ACV renewal products on your opportunity.</description>
        <label>New Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal</fullName>
        <active>true</active>
        <businessProcess>Renewals</businessProcess>
        <description>Use this if there are one or more ACV renewal products on your opportunity.</description>
        <label>Renewal</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Region_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name != &apos;System Administrator&apos;,
CONTAINS(TEXT(StageName), &apos;Closed&apos;),
ISPICKVAL(Account.Region__c,&apos;&apos;)
)</errorConditionFormula>
        <errorMessage>Region on the related Account is blank. Please select a region on the related Account or contact Operations User or system Administrator in order to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Add_or_Remove_Renewal_Opp_Product</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name != &apos;Operations User&apos; &amp;&amp;
 $Profile.Name != &apos;System Administrator&apos; &amp;&amp;
  RecordType.DeveloperName = &apos;Renewal&apos; &amp;&amp;  ISCHANGED(No_of_Opportunity_Products__c )</errorConditionFormula>
        <errorMessage>Cannot add or remove products from a renewal opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_CWV_Opp_Invoice_Unpaid</fullName>
        <active>true</active>
        <description>Cannot close won verify opportunity since Invoice is Unpaid</description>
        <errorConditionFormula>And($Profile.Name != &apos;System Administrator&apos; ,Invoice_Unpaid__c, ISPICKVAL(StageName,&apos;Closed Won Verified&apos;))</errorConditionFormula>
        <errorDisplayField>Invoice_Unpaid__c</errorDisplayField>
        <errorMessage>Cannot Close Won Verify Opportunity Since Invoice is Unpaid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Cancel_Opp_with_Renewed_Product</fullName>
        <active>true</active>
        <description>Can not close cancel an renewal opportunity with any product which is renewed. The opportunity products should be cancelled.</description>
        <errorConditionFormula>$Profile.Name != &apos;System Administrator&apos; &amp;&amp; 
RecordType.DeveloperName = &apos;Renewal&apos; &amp;&amp;
( ISPICKVAL( StageName , &apos;Closed Cancelled&apos;)   ||  ISPICKVAL( StageName , &apos;Closed Cancelled Verified&apos;))&amp;&amp;
No_of_Renewed_Opp_Products__c != 0</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>You can not close cancel this opportunity with renewed opportunity product. Please check the opportunity products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Close_Opp_Without_Contract</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( $Permission.By_Pass_Opportunity_Validations ) &amp;&amp;
IsClosed &amp;&amp; CONTAINS(TEXT(StageName), &quot;Won&quot;) &amp;&amp; (
    ISBLANK( Contract__c ) ||
    NOT( ISPICKVAL( Contract__r.Status__c , &quot;Customer Executed&quot; ) ) &amp;&amp;
    NOT( ISPICKVAL( Contract__r.Status__c , &quot;Fully Executed&quot; ) )
)</errorConditionFormula>
        <errorDisplayField>Contract__c</errorDisplayField>
        <errorMessage>Cannot close win opportunity without a contract in Customer Executed or Fully Executed status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Close_Opp_Without_Opp_Prod_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND( No_of_Opp_Products_without_Status__c &gt; 0,
     IsClosed
)</errorConditionFormula>
        <errorMessage>Cannot close opportunity with products that do not have a status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Cls_Opty_if_InvoiceUnpaid_Checked</fullName>
        <active>true</active>
        <description>Prevent SalesRep from changing the opportunity stage to Closed Won Sales if  &quot;Invoice Unpaid&quot; field is checked</description>
        <errorConditionFormula>$Profile.Name =&apos;Sales User&apos; &amp;&amp; 
ISPICKVAL( StageName , &apos;Closed Won Sales&apos;)  &amp;&amp; 
Invoice_Unpaid__c = TRUE</errorConditionFormula>
        <errorMessage>Not eligible to renew, prior year invoice unpaid. Please consult Finance and Sales Manager</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Create_Opp_On_Lead_Conversion</fullName>
        <active>false</active>
        <description>Throw an error if an Opportunity is being created during the Lead conversion process.  There is a Prevent_Opp_Creation_on_Convert_System__c on both the Lead and Opportunity objects that are mapped to each other.</description>
        <errorConditionFormula>Prevent_Opp_Creation_on_Convert_System__c</errorConditionFormula>
        <errorMessage>Creating an Opportunity upon Lead conversion is currently not allowed.  Please select the &apos;Do not create a new opportunity upon conversion&apos; checkbox to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Closed_Opportunities</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE( IsClosed ) = TRUE &amp;&amp;  
($Profile.Name != &apos;Operations User&apos; &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>Cannot edit closed opportunities.  Please ask Sales Operations to make any necessary changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Close_Date_On_Closed_Opp</fullName>
        <active>true</active>
        <description>Cannot modify the Close Date field on a closed Opportunity</description>
        <errorConditionFormula>$Profile.Name != &quot;System Administrator&quot; 
&amp;&amp; ISCHANGED(CloseDate)
&amp;&amp; IsClosed</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Cannot modify the Close Date on a closed Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Close_Date_on_Renewal_Opp</fullName>
        <active>true</active>
        <description>Cannot modify the Close Date on a Renewal Opportunity</description>
        <errorConditionFormula>$Profile.Name != &apos;System Administrator&apos; &amp;&amp;
  RecordType.DeveloperName = &apos;Renewal&apos; &amp;&amp;  ISCHANGED(CloseDate)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Cannot modify the Close Date on a Renewal Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Closed_Verified_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name != &apos;System Administrator&apos; &amp;&amp;
( 
 ISPICKVAL(PRIORVALUE(StageName),&apos;Closed Won Verified&apos;) ||
ISPICKVAL(PRIORVALUE(StageName),&apos;Closed Cancelled Verified&apos;)
)</errorConditionFormula>
        <errorMessage>Cannot edit closed verified opportunities. Please ask System Administrator to make any necessary changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Set_Stage_to_Closed_Won_Verified</fullName>
        <active>true</active>
        <errorConditionFormula>($Profile.Name != &apos;Operations User&apos; &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos;) &amp;&amp;
ISCHANGED( StageName ) &amp;&amp; ISPICKVAL( StageName, &apos;Closed Won Verified&apos;)</errorConditionFormula>
        <errorMessage>Only Operations users can change to Closed Won Verified.  Please ask Sales Operations to advance this stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_All_Products_Are_Add_Ons_Products</fullName>
        <active>true</active>
        <errorConditionFormula>No_of_Product_Add_Ons__c != 0 &amp;&amp;  No_of_Product_Add_Ons__c !=  No_of_Opportunity_Products__c</errorConditionFormula>
        <errorMessage>Opportunities with one or more Add On opportunity products must only contain Add On opportunity products</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Oppty_Products_without_Subsidy</fullName>
        <active>true</active>
        <description>Check opportunity products without subsidy if tier value is entered on Opportunity and stage is closed won sales and closed won verified.</description>
        <errorConditionFormula>AND(No_of_Opp_Products_without_Subsidy__c &gt; 0,   
    NOT( ISPICKVAL(NYSE_Program_Tier__c, &apos;&apos;) ),
    AND(CONTAINS(TEXT(StageName), &quot;Closed&quot;),
        TEXT(StageName)&lt;&gt; &quot;Closed Lost&quot;)
)</errorConditionFormula>
        <errorMessage>Apply NYSE Subsidy? is required on all products when NYSE Program Tier provided</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Opt_When_Closed_Cancel_Verified</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name != &apos;Operations User&apos; &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos; &amp;&amp;
ISCHANGED( StageName ) &amp;&amp;
ISPICKVAL( StageName, &apos;Closed Cancelled Verified&apos;)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Only Operations users can change to Closed Cancelled Verified. Please ask Sales Operations to advance this stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NNB_negative_when_Provisional_Cancel</fullName>
        <active>true</active>
        <description>Net New Business should be &lt; 0 when Stage is Provisional Cancel
SPS-1697</description>
        <errorConditionFormula>AND
(
    Net_New_Business__c &gt;=0, 
    ISPICKVAL(StageName, &apos;Provisional Cancel&apos;)
)</errorConditionFormula>
        <errorMessage>Net New Business must be &lt; 0 when Stage is Provisional Cancel.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ops_can_only_set_cancel_rel_at_closed</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name = &apos;Operations User&apos;
&amp;&amp;
ISCHANGED(Cancel_Relief__c)
&amp;&amp;
NOT(ISPICKVAL( StageName, &apos;Closed Cancelled Verified&apos;) || ISPICKVAL( StageName, &apos;Closed Cancelled&apos;))</errorConditionFormula>
        <errorDisplayField>Cancel_Relief__c</errorDisplayField>
        <errorMessage>Sales Ops can only set Cancel Relief at Closed Cancelled (Or Closed Cancelled Verified) stages.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Contracted_Value_When_NYSE_Valued</fullName>
        <active>true</active>
        <errorConditionFormula>( IsWon || IsClosed )
&amp;&amp; NOT(ISPICKVAL(NYSE_Program_Tier__c , &apos;&apos;))
&amp;&amp; ISBLANK(Non_Subsidized_Contracted_Value__c)</errorConditionFormula>
        <errorMessage>Contracted Value required when NYSE Program Tier has a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_LOB_When_Close_Win</fullName>
        <active>true</active>
        <errorConditionFormula>IsWon &amp;&amp;  IsClosed &amp;&amp; ISPICKVAL( LOB__c , &apos;&apos;) &amp;&amp; NOT( ISPICKVAL( Vertical__c , &apos;Other&apos; ) ) &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>LOB__c</errorDisplayField>
        <errorMessage>LOB required to close win this opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_NYSE_Program_Tier</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISPICKVAL( StageName , &apos;Closed Won Verified&apos;)
   ,NOT(ISBLANK( Non_Subsidized_Contracted_Value__c ))
   ,ISPICKVAL( NYSE_Program_Tier__c , &apos;&apos;) 
)</errorConditionFormula>
        <errorMessage>NYSE Program Tier required when Contracted Value entered</errorMessage>
    </validationRules>
</CustomObject>